feat: accent color based on folder color, closes #762

--- a/src/renderer/scss/_variables.scss
+++ b/src/renderer/scss/_variables.scss
@@ -1,5 +1,5 @@
 /* Colors */
-$body-bg: #fdfdfd;
+$body-bg: #f3f3f3;
 $body-bg-dark: #1d1d1d;
 $body-font-color-dark: #fff;
 $bg-color-dark: #1d1d1d;
