--- a/src/renderer/scss/themes/dark-theme.scss
+++ b/src/renderer/scss/themes/dark-theme.scss
@@ -33,8 +33,37 @@
 
     .menu-item a {
       &:hover {
-        color: $primary-color;
+        color: var(--primary-color);
         background: $bg-color-gray;
+      }
+    }
+  }
+
+  .tab {
+    .tab-item {
+      a {
+        color: $body-font-color-dark;
+        opacity: .7;
+  
+        &:hover {
+          color: $body-font-color-dark;
+          opacity: 1;
+        }
+      }
+
+      &.active {
+        a {
+          color: $body-font-color-dark;
+          opacity: 1;
+        }
+  
+        .tab-link {
+          border-color: transparent;
+        }
+  
+        &::after {
+          width: 100%;
+        }
       }
     }
   }
@@ -67,7 +96,7 @@
       }
 
       &.active {
-        background-color: $primary-color;
+        background-color: var(--primary-color);
       }
     }
 
@@ -124,7 +153,7 @@
   }
 
   .form-select:not([multiple], [size]):focus {
-    border-color: $primary-color;
+    border-color: var(--primary-color);
   }
 
   .select {
@@ -432,7 +461,7 @@
       .settingbar-element {
         .settingbar-element-icon {
           &.badge-update::after {
-            background: $primary-color;
+            background: var(--primary-color);
           }
         }
       }
@@ -447,7 +476,7 @@
   }
 
   #footer {
-    background: $primary-color;
+    background: var(--primary-color);
     box-shadow: 0 0 1px 0 #000;
 
     .footer-elements {
