feat: in-app debug console, closes #824

--- a/src/renderer/scss/themes/light-theme.scss
+++ b/src/renderer/scss/themes/light-theme.scss
@@ -173,11 +173,11 @@
     }
   }
 
-  .query-console {
+  .console {
     border-top: 1px solid darken($bg-color-light-gray, 15%);
     background-color: $bg-color-light;
 
-    .query-console-log {
+    .console-log {
       &:hover,
       &:focus {
         background: $bg-color-light-gray;
