--- a/src/renderer/scss/themes/dark-theme.scss
+++ b/src/renderer/scss/themes/dark-theme.scss
@@ -349,11 +349,11 @@
     }
   }
 
-  .query-console {
+  .console {
     border-top: 1px solid #444;
     background-color: $bg-color-dark;
 
-    .query-console-log {
+    .console-log {
       &:hover,
       &:focus {
         background: $bg-color-gray;
