feat(UI): new context menu and some minor improvements to query tabs, closes #867

--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -256,6 +256,10 @@ option:checked {
     }
 
     &.active {
+      a {
+        border-bottom-color: transparent;
+      }
+
       .tab-link {
         border-color: transparent;
       }
